force-app/main/default/objects/numm__InfosBank__c/numm__InfosBank__c.object-meta.xml
<CustomObject>
    <description>Information bancaire liées à une tiers (rôles)</description>
    <label>Information bancaire</label>
    <nameField>
        <label>Banque</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Informations bancaire</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>