force-app/main/default/objects/numm__InfosBank__c/fields/numm__CleRib__c.field-meta.xml
<CustomField>
    <fullName>numm__CleRib__c</fullName>
    <label>Clé RIB</label>
    <length>2</length>
    <type>Text</type>
</CustomField>