force-app/main/default/objects/numm__InfosBank__c/fields/numm__Code_guichet__c.field-meta.xml
<CustomField>
    <fullName>numm__Code_guichet__c</fullName>
    <label>Code guichet</label>
    <length>5</length>
    <type>Text</type>
</CustomField>