force-app/main/default/objects/numm__InfosBank__c/fields/numm__Country__c.field-meta.xml
<CustomField>
    <fullName>numm__Country__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Pays</label>
    <referenceTo>numm__Country__c</referenceTo>
    <relationshipLabel>Informations bancaire</relationshipLabel>
    <relationshipName>Informations_bancaire</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>