force-app/main/default/objects/numm__InfosBank__c/fields/numm__Date_dernier_solde__c.field-meta.xml
<CustomField>
    <fullName>numm__Date_dernier_solde__c</fullName>
    <inlineHelpText>Correspond à la date du dernier relevé bancaire importé sur NUMM</inlineHelpText>
    <label>Date dernier solde</label>
    <type>Date</type>
</CustomField>