force-app/main/default/objects/numm__InfosBank__c/fields/numm__Date_Mandat__c.field-meta.xml
<CustomField>
    <fullName>numm__Date_Mandat__c</fullName>
    <description>Date de signature du mandat (SEPA)</description>
    <label>Date de signature du mandat</label>
    <type>Date</type>
</CustomField>