force-app/main/default/objects/numm__InfosBank__c/fields/numm__Dernier_solde__c.field-meta.xml
<CustomField>
    <fullName>numm__Dernier_solde__c</fullName>
    <inlineHelpText>Correspond au dernier solde bancaire importé dans NUMM</inlineHelpText>
    <label>Dernier solde</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>