force-app/main/default/objects/numm__InfosBank__c/fields/numm__Etablissement__c.field-meta.xml
<CustomField>
    <fullName>numm__Etablissement__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Etablissement</label>
    <referenceTo>numm__Establishment__c</referenceTo>
    <relationshipLabel>Informations bancaires</relationshipLabel>
    <relationshipName>Informations_bancaire</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>