force-app/main/default/objects/numm__InfosBank__c/fields/numm__ICS__c.field-meta.xml
<CustomField>
    <fullName>numm__ICS__c</fullName>
    <label>Identifiant Créancier SEPA</label>
    <length>35</length>
    <type>Text</type>
</CustomField>