force-app/main/default/objects/numm__InfosBank__c/fields/numm__IsDefault__c.field-meta.xml
<CustomField>
    <fullName>numm__IsDefault__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Défaut</label>
    <type>Checkbox</type>
</CustomField>