force-app/main/default/objects/numm__InfosBank__c/fields/numm__Num_compte__c.field-meta.xml
<CustomField>
    <fullName>numm__Num_compte__c</fullName>
    <label>N° de compte</label>
    <length>11</length>
    <type>Text</type>
</CustomField>