force-app/main/default/objects/numm__InfosBank__c/fields/numm__RIB__c.field-meta.xml
<CustomField>
    <fullName>numm__RIB__c</fullName>
    <formula>numm__Code_banque__c  &amp; &quot; &quot; &amp;  numm__Code_guichet__c &amp; &quot; &quot; &amp; numm__Num_compte__c &amp; &quot; &quot; &amp; numm__CleRib__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Ne rien saisir, ce met automatiquement une fois que le Code banque, Code guichet, N° de compte et la Clé RIB</inlineHelpText>
    <label>RIB</label>
    <type>Text</type>
</CustomField>