force-app/main/default/objects/numm__InfosBank__c/fields/numm__RUM__c.field-meta.xml
<CustomField>
    <fullName>numm__RUM__c</fullName>
    <description>Numéro de mandat (SEPA)</description>
    <label>Numéro de mandat</label>
    <length>35</length>
    <type>Text</type>
</CustomField>