force-app/main/default/objects/numm__InfosBank__c/fields/numm__SWIFT__c.field-meta.xml
<CustomField>
    <fullName>numm__SWIFT__c</fullName>
    <label>SWIFT</label>
    <length>11</length>
    <type>Text</type>
</CustomField>