force-app/main/default/objects/numm__InfosBank__c/fields/numm__Tech_Uniq_EtabTiers__c.field-meta.xml
<CustomField>
    <fullName>numm__Tech_Uniq_EtabTiers__c</fullName>
    <label>Tech_Uniq_EtabTiers</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>