force-app/main/default/objects/numm__InfosBank__c/fields/numm__Tech_Uniq_Rib__c.field-meta.xml
<CustomField>
    <fullName>numm__Tech_Uniq_Rib__c</fullName>
    <description>Unicité du RIB (sans la clé)</description>
    <label>Tech_Uniq_Rib</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>