force-app/main/default/objects/numm__InfosBank__c/fields/numm__ThirdPartyRule__c.field-meta.xml
<CustomField>
    <fullName>numm__ThirdPartyRule__c</fullName>
    <description>Rôle du tiers</description>
    <label>Role du Tiers</label>
    <referenceTo>numm__ThirdPartyRule__c</referenceTo>
    <relationshipLabel>Informations bancaire</relationshipLabel>
    <relationshipName>Informations_bancaire</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>