force-app/main/default/objects/numm__InfosBank__c/fields/numm__Tiers_payeur__c.field-meta.xml
<CustomField>
    <fullName>numm__Tiers_payeur__c</fullName>
    <label>Tiers payeur</label>
    <length>100</length>
    <type>Text</type>
</CustomField>