force-app/main/default/objects/numm__InfosBank__c/fields/numm__Type_de_sequence__c.field-meta.xml
<CustomField>
    <fullName>numm__Type_de_sequence__c</fullName>
    <description>Type de séquence (SEPA)</description>
    <label>Type de séquence</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FRST</fullName>
            </value>
            <value>
                <fullName>RCUR</fullName>
            </value>
            <value>
                <fullName>FNAL</fullName>
            </value>
            <value>
                <fullName>OOF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>