force-app/main/default/objects/numm__InfosBank__c/fields/numm__ZipCode__c.field-meta.xml
<CustomField>
    <fullName>numm__ZipCode__c</fullName>
    <label>Code postal</label>
    <length>5</length>
    <type>Text</type>
</CustomField>