force-app/main/default/objects/numm__InfosBank__c/validationRules/numm__CheckIntegrityEtabEntity.validationRule-meta.xml
<ValidationRule>
    <fullName>numm__CheckIntegrityEtabEntity</fullName>
    <active>true</active>
    <description>Vérifie que l&#39;entité de l&#39;établissement est bien le même que celui du rôle du tiers choisi.</description>
    <errorConditionFormula>numm__Etablissement__r.numm__Entity__c &lt;&gt;  numm__ThirdPartyRule__r.numm__Entite__c</errorConditionFormula>
    <errorMessage>L&#39;entité de l&#39;établissement choisi doit être la même que celle du rôle du tiers choisi.</errorMessage>
</ValidationRule>